# brainrs

./: Cargo.toml  README.md
.cargo/: config.toml
brain2/: Cargo.toml  README.md  partitions.csv
brain2/.cargo/: config.toml
brain2/src/: main.rs  proto.rs
brainidf/: Cargo.toml  README.md  build.rs  partitions.csv  sdkconfig.defaults
brainidf/.cargo/: config.toml
brainidf/src/: dithering.rs  main.rs  network_interfaces.rs  ota.rs  proto.rs
brainrs/: Cargo.toml  README.md
brainrs/.cargo/: config.toml
brainrs/src/: main.rs
mockserver/: Cargo.toml
mockserver/src/: main.rs
src/: main.rs
